--- a/aboutus.html
+++ b/aboutus.html
@@ -24,22 +24,23 @@
 		<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology</p>
 	</div>
 	 
-	<div class="tab">
-	  <button class="tablinks" onclick="openCity(event, 'History')">History</button>
-	  <button class="tablinks" onclick="openCity(event,'Constitution'">Constitution</button>
-	   <button class="tablinks" onclick="openCity(event,'D&U Journal'">D&U Journal</button>
-	</div>
-
-	<div id="History" class="tabcontent">
+	<section class="history">
+	<button class="tabs">
 	  <h2>History</h2>
+	</button>
+	<div id="History" class="tabcontent">
 	  <p>The International Society for Universal Dialogue was founded in Warsaw, Poland in 1989. ISUD is a philosophical society dedicated to promoting international and intercultural dialogue among an ever-wider segment of humanity.</p>
 	  <p>The main purpose of the society is to pursue, by means of scholarly work, the gradual realization of a decent, peaceful, and just world order. Towards this goal, ISUD produces biannual international conferences to facilitate an ethos of universal dialogue.</p>
 	  <p>ISUD is committed to promoting philosophical discourse intended to encourage the emergence of a more decent and humane world order by promoting dialogue to actualize the highest and richest human values in all dimensions of life.</p>
 	  <p>ISUD is a member of the International Federation of Philosophical Societies (FISP), is an international association of philosophers and scholars from a wide range of other disciplines (such as history, archaeology, pedagogy, anthropology, etc) devoted to promoting the discussion of such fundamental issues as world peace, social justice, human rights, and dialogical interrelations of diverse cultures.</p>
 	</div>
+    </section>
 
+    <section class="constitution">
+	<button class="tabs">
+	  <h2>Constitution of the IUSD</h2>
+	</button>
 	<div id="Consitution" class="tabcontent">
-	  <h2>Constitution of the ISUD</h2>
 	  <p>We the Members of the International Society for Universal Dialogue, in order to investigate and articulate the basic principles of universality systematically, rationally, and comprehensively—working to promote a world-wide understanding of these principles, striving to help generate universal world-consciousness towards the gradual emergence of a decent world order, and aspiring to actualize the highest and richest human values in art, science, politics, education, and social life—do agree to declare the following statement as the constitution of the International Society for Universal Dialogue.</p>
 	  <h3>Article I</h3>
 	  <p>The official name of the society shall be “The International Society for Universal Dialogue” to be incorporated in the state of Maine, USA.</p>
@@ -91,10 +92,16 @@
 	  <h3>Article IX</h3>
 	    <p>To protect the Society in future years a procedure for evaluation and removal from office after due dialogue is outlined in this Constitution. If any member of the ISUD Board should persistently violate this Constitution in any significant way, or act in a way that seriously jeopardizes our Society, that member will be subject to a process of potential removal. In such a case, the full Board (except the member facing removal) will fully discuss via e-mail (or in person if possible) all the various reasons a given member might face removal. All such correspondence must be shared with the full Board, except the member facing possible removal. Within two weeks of the initiation of such discussions, the member facing possible removal must be fully informed of the reasons for possible removal, and be asked to make a response if desired within one week. Any such response must be shared with all others on the Board, and discussed by them. Then within another week, a vote should be taken concerning removal of the member. A two-thirds majority of the full Board (less the member facing removal) is necessary for removal from office.</p>
 	</div>
+	</section>
 
+	<section class="d&u journal">
+	<button class="tabs">
+	  <h2>Dialogue and Universalism Journal</h2>
+	</button>
 	<div id="D&U Journal" class="tabcontent">
 	  <h2>Dialogue and Universalism</h2>
 	  <h3>Journal of the International Society for Universal Dialogue</h3>
 	</div>
+	</section>
 </body>
 </html>
