Link all of the stylesheets to the folders and create the reset

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title> A-Team Project 2</title>
-	<link rel="stylesheet" type="text/css" href="screen.css">
-	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="css/screen.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<script src="js/script.js"></script>
 </head>
 	
