--- a/aboutus.html
+++ b/aboutus.html
@@ -11,12 +11,10 @@
 
 <body>
 	<header>
-	<nav id="navigation">
-	<ul>
-	  <li><a href="index.html"> Home</a></li>
-	  <li><a href="aboutus.html"> About Us</a></li>
-	  <li><a href="form.html"> Join Us</a></li>
-	</ul>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="aboutus.html" class="active">About Us</a>
+	  	<a href="form.html">Join Us</a>
 	</nav>
 	</header>
 
