--- a/form.html
+++ b/form.html
@@ -8,16 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<script src="js/script.js"></script>
 </head>
-	
-	
+
 <body>
 	<header>
-	<nav id="navigation">
-	<ul>
-	  <li><a href="index.html"> Home</a></li>
-	  <li><a href="aboutus.html"> About Us</a></li>
-	  <li><a href="form.html"> Join Us</a></li>
-	</ul>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="aboutus.html" class="active">About Us</a>
+	  	<a href="form.html">Join Us</a>
 	</nav>
 	</header>
 
