--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title> Home|ISUD </title>
+	<title>Home|ISUD</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<script src="js/script.js"></script>
@@ -11,15 +11,15 @@
 	
 <body>
 	<header>
-	<nav id="navigation">
-	<ul>
-	  <li><a href="index.html"> Home</a></li>
-	  <li><a href="aboutus.html"> About Us</a></li>
-	  <li><a href="form.html"> Join Us</a></li>
-	</ul>
+	<nav>
+	  <a href="index.html" class="active">Home</a>
+	  <a href="aboutus.html">About Us</a>
+	  <a href="form.html">Join Us</a>
 	</nav>
+	<img class="logo" src="media/Logo.png" alt="ISUD Logo">
+	<p class="title">The International Society for Universal Dialogue</p>
 	</header>
-
+	
 	<section>
 	  <h1 id="header">Home</h1>
 	</section>
