--- a/form.html
+++ b/form.html
@@ -13,8 +13,8 @@
 	<header>
 	<nav>
 		<a href="index.html">Home</a>
-		<a href="aboutus.html" class="active">About Us</a>
-	  	<a href="form.html">Join Us</a>
+		<a href="aboutus.html">About Us</a>
+	  	<a href="form.html" class="active">Join Us</a>
 	</nav>
 	</header>
 
