Adding icon on each html files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Home|ISUD</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="icon" href="media/Logo.png">
 	<script src="js/script.js"></script>
 </head>
 	
