--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,7 @@
 	<title> A-Team Project 2</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="icon" href="media/Logo.png">
 	<script src="js/script.js"></script>
 </head>
 
