--- a/index.html
+++ b/index.html
@@ -24,5 +24,18 @@
 	<section>
 	  <h1 id="header">Home</h1>
 	</section>
+	<div id = "full_full">
+		<form name="sign_up_form" action="#null" method="get" autocomplete="on" onsubmit="return valiForm()">
+		 <fieldset>
+			 <label for = "firstname">First Name:</label>
+			 <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
+			 <label for = "lastname">Last Name:</label>
+			 <input type="text" name ="l_name" id ="lastname" placeholder="Enter Last Name">
+			 <label for = "emailid">Email Address:</label>
+			 <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
+		 	</fieldset>
+			<input type ="submit" value = "Join Us!">
+		</form>
+  </div>
 </body>
 </html>
