fixing div id name

--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
 	  <h1 id="header">Contact Us</h1>
 	</section>
 	
-	<div id = "full_full">
+	<div id = "full_form">
 		<form name="sign_up_form" action="#null" method="get" autocomplete="on" onsubmit="return valiForm()">
 		 <fieldset>
 			 <label for = "firstname">First Name:</label>
