Added media buttons

--- a/form.html
+++ b/form.html
@@ -36,5 +36,10 @@
 		 <input type ="submit" value = "Join Us!">
 		</form>
 	</div>
+	<div id = "buttons">
+		<button type="button">Facebook</button>
+		<button type="button">LinkedIn</button>
+		<button type="button">Google+</button>
+	</div>
 </body>
 </html>
