--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title> A-Team Project 2</title>
+	<title>About Us | ISUD</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
