adding a very small blurb to convince ppl to sign up

--- a/form.html
+++ b/form.html
@@ -15,14 +15,15 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="aboutus.html">About Us</a>
-	  	<a href="form.html" class="active">Join Us</a>
+	  	<a href="form.html" class="active">Conferences</a>
 	</nav>
 	</header>
 	
 	<section>
-	  <h1 id="header">Contact Us</h1>
+	  <h1 id="header">Conferences</h1>
 	</section>
-	
+	<h2>Next Conference in Austria!</h2>
+	<h3>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h3>
 	<div id = "full_form">
 		<form name="sign_up_form" action="#null" method="get" autocomplete="on" onsubmit="return valiForm()">
 		 <fieldset>
