--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="aboutus.html" class="active">About Us</a>
-	  	<a href="form.html">Join Us</a>
+	  	<a href="form.html">Conferences</a>
 	</nav>
 	</header>
 
