--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav>
 	  <a href="index.html" class="active">Home</a>
 	  <a href="aboutus.html">About Us</a>
-	  <a href="form.html">Join Us</a>
+	  <a href="form.html">Conferences</a>
 	</nav>
 	<img class="logo" src="media/Logo.png" alt="ISUD Logo">
 	<p class="title">The International Society for Universal Dialogue</p>
