changing submit button name

--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
 			 <label for = "emailid">Email Address:</label>
 			 <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
 		 </fieldset>
-		 <input type ="submit" value = "Join Us!">
+		 <input type ="submit" value = "Sign Up!">
 		</form>
 	</div>
 	<div id = "buttons">
