Add content to the buttons and revise CSS for buttons

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,8 +38,25 @@
 	  	  	<h4>History</h4>
 	  	  </section>
 	  	</div>
-	  </section>
+
+	    <button class="tabs">
+	      <h2>Constitution of the IUSD</h2>
+	    </button>
+	    <div class="tabcontent">
+	      <section id="tab2" class="content">
+	      	<h4>Consitution</h4>
+	      </section>
+	    </div>
 	 
-	
+	 	<button class="tabs">
+	 	  <h2>Dialogue and Universalism Journal</h2>
+	 	</button>
+	 	<div class="tabcontent">
+	 	  <section id="tab3" class="content">
+	 	  	<h4>Dialogie and Universalism</h4>
+	 	  	<h5>Journal of the International Society for Universal Dialogue</h5>
+	 	  </section>
+	 	</div>
+	 	</section>
 </body>
 </html>
