Make some changes in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Home | ISUD</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+	<title>Home|ISUD</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
@@ -15,15 +16,14 @@
 	<nav>
 	  <a href="index.html" class="active">Home</a>
 	  <a href="aboutus.html">About Us</a>
-	  <a href="form.html">Conferences</a>
+	  <a href="form.html">Join Us</a>
 	</nav>
 	<img class="logo" src="media/Logo.png" alt="ISUD Logo">
 	<p class="title">The International Society for Universal Dialogue</p>
 	</header>
-
+	
 	<section>
 	  <h1 id="header">Home</h1>
 	</section>
-	
 </body>
 </html>
