--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,11 @@
 	  	</button>
 	  	<div class="tabcontent">
 	  	  <section id="tab1" class="content">
-	  	  	<h4>History</h4>
+	  	  	<h4>The International Society for Universal Dialogue</h4>
+	  	  	<p>The International Society for Universal Dialogue was founded in Warsaw, Poland in 1989. ISUD is a philosophical society dedicated to promoting international and intercultural dialogue among an ever-wider segment of humanity.</p>
+			<p>The main purpose of the society is to pursue, by means of scholarly work, the gradual realization of a decent, peaceful, and just world order. Towards this goal, ISUD produces biannual international conferences to facilitate an ethos of universal dialogue.</p>
+			<p>ISUD is committed to promoting philosophical discourse intended to encourage the emergence of a more decent and humane world order by promoting dialogue to actualize the highest and richest human values in all dimensions of life.</p>
+			<p>ISUD is a member of the International Federation of Philosophical Societies (FISP), is an international association of philosophers and scholars from a wide range of other disciplines (such as history, archaeology, pedagogy, anthropology, etc) devoted to promoting the discussion of such fundamental issues as world peace, social justice, human rights, and dialogical interrelations of diverse cultures.</p>
 	  	  </section>
 	  	</div>
 
