Add the four images into the page

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,6 +21,11 @@
 	</header>
 
 	<main>
+	  <section id="photos">
+	  	<img src="media/mountains.jpg" alt="Man and Mountain">
+	  	<img src="media/monkey.jpeg" alt="Monkey">
+	  	<img src="media/canal.jpeg" alt="Water">
+	  	<img src="statue.jpeg" alt="Statue">
 	  <section>
 	    <h1 id="header">About Us</h1>
 	  </section>
