--- a/aboutus.html
+++ b/aboutus.html
@@ -114,8 +114,10 @@
 	 	</button>
 	 	<div class="tabcontent">
 	 	  <section id="tab3" class="content">
-	 	  	<h4>Dialogie and Universalism</h4>
+	 	  	<h4>Dialogue and Universalism</h4>
 	 	  	<h5>Journal of the International Society for Universal Dialogue</h5>
+	 	  	<a href="www.dialogueanduniversal.eu"><img src="media/journal/png" alt="Journal Picture"></a>
+	 	  	<p>Visit the ISUD companion Journal @ www.dialogueanduniversal.eu
 	 	  </section>
 	 	</div>
 	 	</section>
