--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
 	  	<img src="media/mountains.jpg" alt="Man and Mountain">
 	  	<img src="media/monkey.jpeg" alt="Monkey">
 	  	<img src="media/canal.jpeg" alt="Water">
-	  	<img src="statue.jpeg" alt="Statue">
+	  	<img src="media/statue.jpeg" alt="Statue">
 	  <section>
 	    <h1 id="header">About Us</h1>
 	  </section>
@@ -116,7 +116,7 @@
 	 	  <section id="tab3" class="content">
 	 	  	<h4>Dialogue and Universalism</h4>
 	 	  	<h5>Journal of the International Society for Universal Dialogue</h5>
-	 	  	<a href="www.dialogueanduniversal.eu"><img src="media/journal/png" alt="Journal Picture"></a>
+	 	  	<a href="http://dialogueanduniversalism.eu/"><img src="media/journal.png" alt="Journal Picture"></a>
 	 	  	<p>Visit the ISUD companion Journal @ www.dialogueanduniversal.eu
 	 	  </section>
 	 	</div>
