--- a/aboutus.html
+++ b/aboutus.html
@@ -21,15 +21,17 @@
 	</header>
 
 	<main>
+	  <section>
+	    <h1 id="header">About Us</h1>
+	  </section>
+
 	  <section id="photos">
 	  	<img src="media/mountains.jpg" alt="Man and Mountain">
 	  	<img src="media/monkey.jpeg" alt="Monkey">
 	  	<img src="media/canal.jpeg" alt="Water">
 	  	<img src="media/statue.jpeg" alt="Statue">
-	  <section>
-	    <h1 id="header">About Us</h1>
 	  </section>
-
+	  
 	  <h2 id=title>Who are We?</h2>
 	  <div class="information">
 		<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology</p>
