Adjust html to pass verification

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
 	  	<img src="media/canal.jpeg" alt="Water">
 	  	<img src="media/statue.jpeg" alt="Statue">
 	  </section>
-	  
+
 	  <h2 id=title>Who are We?</h2>
 	  <div class="information">
 		<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology</p>
@@ -39,7 +39,7 @@
 
 	  <section class="primary">
 	  	<button class="tabs">
-	  	  <h2>History</h2>
+	  	  <h3>History</h3>
 	  	</button>
 	  	<div class="tabcontent">
 	  	  <section id="tab1" class="content">
@@ -52,12 +52,12 @@
 	  	</div>
 
 	    <button class="tabs">
-	      <h2>Constitution of the IUSD</h2>
+	      <h3>Constitution of the IUSD</h3>
 	    </button>
 	    <div class="tabcontent">
 	      <section id="tab2" class="content">
 	      	<h4>Consitution of the International Society for Universal Dialogue</h4>
-	      	<p>We the Members of the International Society for Universal Dialogue, in order to investigate and articulate the basic principles of universality systematically, rationally, and comprehensively—working to promote a world-wide understanding of these principles, striving to help generate universal world-consciousness towards the gradual emergence of a decent world order, and aspiring to actualize the highest and richest human values in art, science, politics, education, and social life—do agree to declare the following statement as the constitution of the International Society for Universal Dialogue.<p>
+	      	<p>We the Members of the International Society for Universal Dialogue, in order to investigate and articulate the basic principles of universality systematically, rationally, and comprehensively—working to promote a world-wide understanding of these principles, striving to help generate universal world-consciousness towards the gradual emergence of a decent world order, and aspiring to actualize the highest and richest human values in art, science, politics, education, and social life—do agree to declare the following statement as the constitution of the International Society for Universal Dialogue.</p>
 			<h5>Article I</h5>
 			<p>The official name of the society shall be “The International Society for Universal Dialogue” to be incorporated in the state of Maine, USA.</p>
 			<h5>Article II</h5>
@@ -112,16 +112,17 @@
 	    </div>
 	 
 	 	<button class="tabs">
-	 	  <h2>Dialogue and Universalism Journal</h2>
+	 	  <h3>Dialogue and Universalism Journal</h3>
 	 	</button>
 	 	<div class="tabcontent">
 	 	  <section id="tab3" class="content">
 	 	  	<h4>Dialogue and Universalism</h4>
 	 	  	<h5>Journal of the International Society for Universal Dialogue</h5>
 	 	  	<a href="http://dialogueanduniversalism.eu/"><img src="media/journal.png" alt="Journal Picture"></a>
-	 	  	<p>Visit the ISUD companion Journal @ www.dialogueanduniversal.eu
+	 	  	<p>Visit the ISUD companion Journal @ www.dialogueanduniversal.eu</p>
 	 	  </section>
 	 	</div>
 	 	</section>
+	</main>
 </body>
 </html>
