Adjust to pass html verification

--- a/aboutus.html
+++ b/aboutus.html
@@ -25,12 +25,12 @@
 	    <h1 id="header">About Us</h1>
 	  </section>
 
-	  <section id="photos">
+	  <div id="photos">
 	  	<img src="media/mountains.jpg" alt="Man and Mountain">
 	  	<img src="media/monkey.jpeg" alt="Monkey">
 	  	<img src="media/canal.jpeg" alt="Water">
 	  	<img src="media/statue.jpeg" alt="Statue">
-	  </section>
+	  </div>
 
 	  <h2 id=title>Who are We?</h2>
 	  <div class="information">
@@ -38,9 +38,7 @@
 	  </div>
 
 	  <section class="primary">
-	  	<button class="tabs">
-	  	  <h3>History</h3>
-	  	</button>
+	  	<button class="tabs" type="button">History</button>
 	  	<div class="tabcontent">
 	  	  <section id="tab1" class="content">
 	  	  	<h4>The International Society for Universal Dialogue</h4>
