Change to pass html verificiation

--- a/aboutus.html
+++ b/aboutus.html
@@ -49,9 +49,7 @@
 	  	  </section>
 	  	</div>
 
-	    <button class="tabs">
-	      <h3>Constitution of the IUSD</h3>
-	    </button>
+	    <button class="tabs" type="button">Constitution of the IUSD</button>
 	    <div class="tabcontent">
 	      <section id="tab2" class="content">
 	      	<h4>Consitution of the International Society for Universal Dialogue</h4>
@@ -109,9 +107,7 @@
 	      </section>
 	    </div>
 	 
-	 	<button class="tabs">
-	 	  <h3>Dialogue and Universalism Journal</h3>
-	 	</button>
+	 	<button class="tabs" type="button">Dialogue and Universalism Journal</button>
 	 	<div class="tabcontent">
 	 	  <section id="tab3" class="content">
 	 	  	<h4>Dialogue and Universalism</h4>
