HTML verification changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -37,7 +37,7 @@
 		<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology</p>
 	  </div>
 
-	  <section class="primary">
+	  <div class="primary">
 	  	<button class="tabs" type="button">History</button>
 	  	<div class="tabcontent">
 	  	  <section id="tab1" class="content">
@@ -116,7 +116,7 @@
 	 	  	<p>Visit the ISUD companion Journal @ www.dialogueanduniversal.eu</p>
 	 	  </section>
 	 	</div>
-	 	</section>
+	 	</div>
 	</main>
 </body>
 </html>
