--- a/form.html
+++ b/form.html
@@ -15,12 +15,12 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="aboutus.html">About Us</a>
-	  	<a href="form.html" class="active">Conferences</a>
+	  	<a href="form.html" class="active">Join Us</a>
 	</nav>
 	</header>
 	
 	<section>
-	  <h1 id="header">Conferences</h1>
+	  <h1 id="header">Join Us</h1>
 	</section>
 	<h2>Next Conference in Austria!</h2>
 	<h3>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h3>
