--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 	<script src="js/script.js"></script>
 </head>
 	
@@ -22,5 +23,26 @@
 	<p class="title">The International Society for Universal Dialogue</p>
 	</header>
 	
+	<!-- Video Section -->
+	<section class="video">
+	  <video controls>
+			<source src="media/video.mp4" type="video/mp4">
+			<source src="media/video.ogg" type="video/ogg">
+			Your browser does not support videoplay.
+		</video>
+	</section>
+	
+	<!-- Sentences Section -->
+	<section class="quotes">
+		<div class="quote">
+			<p>Every human is like all other humans, some other humans and no other human. -Clyde Kluckhohn</p>
+		</div>
+		<div class="argument">
+			<p>Do you want to join an international origination with people who believe very different things than you do?</p>
+		</div>
+		<div class="join-us">
+			<p>Join Us Today by Signing Up in: <a href="form.html"><button>Join Us</button></a></p>
+		</div>
+	</section>
 </body>
 </html>
