added individual divs for social media buttons

--- a/form.html
+++ b/form.html
@@ -38,9 +38,15 @@
 		</form>
 	</div>
 	<div id = "buttons">
-		<button type="button">Facebook</button>
-		<button type="button">LinkedIn</button>
-		<button type="button">Google+</button>
+		<div id = "button1">
+			<button type="button">Facebook</button>
+		</div>
+		<div id = "button2">
+			<button type="button">LinkedIn</button>
+		</div>
+		<div id = "button3">
+			<button type="button">Google+</button>
+  		</div>
 	</div>
 </body>
 </html>
