--- a/form.html
+++ b/form.html
@@ -24,29 +24,26 @@
 	</section>
 	<h2>Next Conference in Austria!</h2>
 	<h3>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h3>
-	<div id = "full_form">
-		<form name="sign_up_form" action="#null" method="get" autocomplete="on" onsubmit="return valiForm()">
-		 <fieldset>
-			 <label for = "firstname">First Name:</label>
-			 <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
-			 <label for = "lastname">Last Name:</label>
-			 <input type="text" name ="l_name" id ="lastname" placeholder="Enter Last Name">
-			 <label for = "emailid">Email Address:</label>
-			 <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
-		 </fieldset>
-		 <input type ="submit" value = "Sign Up!">
-		</form>
-	</div>
-	<div id = "buttons">
-		<div id = "button1">
-			<button type="button">Facebook</button>
+	<div id = "fullcontain">
+		<div class="divline"></div>
+		<div id = "full_form">
+			<form name="sign_up_form" action="#null" method="get" autocomplete="on" onsubmit="return valiForm()">
+			 <fieldset>
+				 <label for = "firstname">First Name:</label>
+				 <input type="text" name ="f_name" id ="firstname" placeholder="Enter First Name">
+				 <label for = "lastname">Last Name:</label>
+				 <input type="text" name ="l_name" id ="lastname" placeholder="Enter Last Name">
+				 <label for = "emailid">Email Address:</label>
+				 <input type = "email" name = "email_id" id ="emailid" placeholder = "abcd13@gmail.com">
+			 	</fieldset>
+				<input type ="submit" value = "Join Us!">
+			</form>
+	  	</div>
+		<div id = "sc_container">
+			<button type="button" class = "button1">Facebook</button>
+			<button type="button" class = "button2">LinkedIn</button>
+			<button type="button" class = "button3">Google+</button>
 		</div>
-		<div id = "button2">
-			<button type="button">LinkedIn</button>
-		</div>
-		<div id = "button3">
-			<button type="button">Google+</button>
-  		</div>
 	</div>
 </body>
 </html>
