--- a/form.html
+++ b/form.html
@@ -22,8 +22,12 @@
 	<section>
 	  <h1 id="header">Join Us</h1>
 	</section>
-	<h2>Next Conference in Austria!</h2>
-	<h3>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h3>
+	
+	<div class="content">
+		<h2>Next Conference in Austria!</h2>
+		<h3>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h3>
+	</div>
+	
 	<div id = "fullcontain">
 		<div class="divline"></div>
 		<div id = "full_form">
