changed title and changed h3 tag to h2

--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Contact Us | ISUD</title>
+	<title>Join Us | ISUD</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
@@ -25,7 +25,7 @@
 	
 	<div class="content">
 		<h2* *Next Conference in Austria! * *</h2>
-		<h3>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h3>
+		<h2>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h2>
 	</div>
 	
 	<div id = "fullcontain">
