--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 	</section>
 	
 	<div class="content">
-		<h2* *Next Conference in Austria! * *</h2>
+		<h2>* *Next Conference in Austria! * *</h2>
 		<h2>Sign up to get more information on the upcoming conference and most importantly to help make a difference!</h2>
 	</div>
 	
