--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
 	  <div class="primary">
 	  	<button class="tabs" type="button">History</button>
 	  	<div class="tabcontent">
-	  	  <section id="tab1" class="content">
+	  	  <section id="tab1" class="content1">
 	  	  	<h4>The International Society for Universal Dialogue</h4>
 	  	  	<p>The International Society for Universal Dialogue was founded in Warsaw, Poland in 1989. ISUD is a philosophical society dedicated to promoting international and intercultural dialogue among an ever-wider segment of humanity.</p>
 			<p>The main purpose of the society is to pursue, by means of scholarly work, the gradual realization of a decent, peaceful, and just world order. Towards this goal, ISUD produces biannual international conferences to facilitate an ethos of universal dialogue.</p>
@@ -51,7 +51,7 @@
 
 	    <button class="tabs" type="button">Constitution of the IUSD</button>
 	    <div class="tabcontent">
-	      <section id="tab2" class="content">
+	      <section id="tab2" class="content1">
 	      	<h4>Consitution of the International Society for Universal Dialogue</h4>
 	      	<p>We the Members of the International Society for Universal Dialogue, in order to investigate and articulate the basic principles of universality systematically, rationally, and comprehensively—working to promote a world-wide understanding of these principles, striving to help generate universal world-consciousness towards the gradual emergence of a decent world order, and aspiring to actualize the highest and richest human values in art, science, politics, education, and social life—do agree to declare the following statement as the constitution of the International Society for Universal Dialogue.</p>
 			<h5>Article I</h5>
@@ -108,10 +108,12 @@
 	    </div>
 	 
 	 	<button class="tabs" type="button">Dialogue and Universalism Journal</button>
-	 	<div class="tabcontent">
+	 	<div class="tabcontent1">
 	 	  <section id="tab3" class="content">
 	 	  	<a href="http://dialogueanduniversalism.eu/"><img src="media/journal.png" alt="Journal Picture"></a>
-	 	  	<p>Visit the ISUD companion Journal @ www.dialogueanduniversal.eu</p>
+	 	  	<p>Visit the ISUD companion journal</p>
+	 	  	<p class="underline">Dialogue and Universalism</p>
+	 	  	<a href="http://dialogueanduniversalism.eu/"><p>@ www.dialogueanduniversalism.eu</p>
 	 	  </section>
 	 	</div>
 	 	</div>
