Format tab 3 and fix html

--- a/aboutus.html
+++ b/aboutus.html
@@ -109,7 +109,7 @@
 	 
 	 	<button class="tabs" type="button">Dialogue and Universalism Journal</button>
 	 	<div class="tabcontent1">
-	 	  <section id="tab3" class="content">
+	 	  <section id="tab3" class="content1">
 	 	  	<a href="http://dialogueanduniversalism.eu/"><img src="media/journal.png" alt="Journal Picture"></a>
 	 	  	<p>Visit the ISUD companion journal</p>
 	 	  	<p class="underline">Dialogue and Universalism</p>
