Add fonts to style the page

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="css/screen.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
+	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 	<script async src="js/script.js"></script>
 </head>
 
