--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
-	<script src="js/script.js"></script>
+	<script async src="js/script.js"></script>
 </head>
 
 <body>
