--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-	<script src="js/script.js"></script>
+	<script async src="js/script.js"></script>
 </head>
 	
 <body>
