correcting pathway to images

--- a/form.html
+++ b/form.html
@@ -52,17 +52,17 @@
 	</div>
 	
 	<div class="con_imgs">
-		<img src="Congress16_1.png" alt="speaker" id = "pg3_1">
+		<img src="media/Congress16_1.png" alt="speaker" id = "pg3_1">
 			<p>July 11-15, 2016</p>
 			<p>Warsaw, Poland</p>
 	</div>
 	<div class="con_imgs">
-		<img src="Congress16_2.png" alt="audience" id = "pg3_1">
+		<img src="media/Congress16_2.png" alt="audience" id = "pg3_1">
 			<p>July 11-15, 2016</p>
 			<p>Warsaw, Poland</p>
 	</div>
 	<div class="con_imgs">
-		<img src="Congress16_3.png" alt="group"id = "pg3_1">
+		<img src="media/Congress16_3.png" alt="group"id = "pg3_1">
 			<p>July 11-15, 2016</p>
 			<p>Warsaw, Poland</p>
 	</div>
