Fix html verification

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/screen.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
-	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 	<script async src="js/script.js"></script>
@@ -112,12 +112,12 @@
 	 
 	 	<button class="tabs" type="button">Dialogue and Universalism Journal</button>
 	 	<div class="tabcontent1">
-	 	  <section id="tab3" class="content1">
+	 	  <div id="tab3" class="content1">
 	 	  	<a href="http://dialogueanduniversalism.eu/"><img src="media/journal.png" alt="Journal Picture"></a>
 	 	  	<p>Visit the ISUD companion journal</p>
 	 	  	<p class="underline">Dialogue and Universalism</p>
-	 	  	<a href="http://dialogueanduniversalism.eu/"><p>@ www.dialogueanduniversalism.eu</p>
-	 	  </section>
+	 	  	<a href="http://dialogueanduniversalism.eu/"><p>@ www.dialogueanduniversalism.eu</p></a>
+	 	  </div>
 	 	</div>
 	 	</div>
 	</main>
