--- a/aboutus.html
+++ b/aboutus.html
@@ -111,7 +111,7 @@
 	    </div>
 	 
 	 	<button class="tabs" type="button">Dialogue and Universalism Journal</button>
-	 	<div class="tabcontent1">
+	 	<div class="tabcontent">
 	 	  <div id="tab3" class="content1">
 	 	  	<a href="http://dialogueanduniversalism.eu/"><img src="media/journal.png" alt="Journal Picture"></a>
 	 	  	<p>Visit the ISUD companion journal</p>
