Link to the new media that is titled with lowercase

--- a/form.html
+++ b/form.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 	<title>Join Us | ISUD</title>
 	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" href="media/Logo.png">
-	<script src="js/script.js"></script>
+	<script async src="js/script.js"></script>
 </head>
 
 <body>
@@ -48,6 +49,22 @@
 			<button type="button" class = "button2">LinkedIn</button>
 			<button type="button" class = "button3">Google+</button>
 		</div>
+	</div>
+	
+	<div class="con_imgs">
+		<img src="media/congress16_1.png" alt="speaker" id = "pg3_1">
+			<p>July 11-15, 2016</p>
+			<p>Warsaw, Poland</p>
+	</div>
+	<div class="con_imgs">
+		<img src="media/congress16_2.png" alt="audience" id = "pg3_2">
+			<p>July 11-15, 2016</p>
+			<p>Warsaw, Poland</p>
+	</div>
+	<div class="con_imgs">
+		<img src="media/congress16_3.png" alt="group" id = "pg3_3">
+			<p>July 11-15, 2016</p>
+			<p>Warsaw, Poland</p>
 	</div>
 </body>
 </html>
