--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  <a href="aboutus.html">About Us</a>
 	  <a href="form.html">Join Us</a>
 	</nav>
-	<img class="logo" src="media/Logo.png" alt="ISUD Logo">
+	<img class="logo" src="media/logo.png" alt="ISUD Logo">
 	<p class="title">The International Society for Universal Dialogue</p>
 	</header>
 	
