--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
 	  	<img src="media/statue.jpeg" alt="Statue">
 	  </div>
 
-	  <h2 id=title>Who are We?</h2>
+	  <h2 id="title">Who are We?</h2>
 	  <div class="information">
 		<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology</p>
 	  </div>
